Added random route flag to the application

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,7 @@
 ---
 applications:
-- name: hellow
+- name: helloworld
   memory: 128M
+  instances: 1
   buildpack: staticfile_buildpack
+  random-route: true
